# anifix

./: .gitignore  README.md  create-test-dir.sh  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
src/anifix/: __init__.py  backup.py  cli.py  core.py  episode.py  renamer.py  spec.py  tvdb.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_core.py  test_edge_cases.py  test_tvdb.py
